temporary fix for dark mode in lazy-beancount

--- a/src/fava_portfolio_returns/templates/style.css
+++ b/src/fava_portfolio_returns/templates/style.css
@@ -2,7 +2,7 @@
     color: #333;
 }
 
-@media (prefers-color-scheme: dark) {
+[data-theme="dark"] {
     .headerline .active {
         color: var(--mui-palette-text-primary);
     }
